
SVN
-------------------------------

XML:   Resolved issue CASTOR-644 using contribution from Edward Kuns [edward.kuns@aspect.com]
       unable to create a file called Con.java on Windows
       Details: http://jira.codehaus.org/browse/CASTOR-644
       (Edward - 20061213)

XML:   Resolved issue CASTOR-1734 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Introduced strategy pattern for class name conflict resolution during code generation (foundation).
       Details: http://jira.codehaus.org/browse/CASTOR-1734
       (Werner - 20061213)

XML:   Resolved issue CASTOR-1693 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved Ant JARs into bin/lib (and thus out of lib), and amended build scripts accordingly.
       Details: http://jira.codehaus.org/browse/CASTOR-1693
       (Werner - 20061213)

JDO:   Resolved issue CASTOR-1688 using contribution from James Abley [james.abley@volantis.com]
       Fixed NullPointerException thrown in ClassMolderHelper.getFullFields() during JDO initialization.
       Details: http://jira.codehaus.org/browse/CASTOR-1688
       (Ralf - 20061213)

XML:   Resolved issue CASTOR-1072 using contribution from Erik Pearson [epearson@cariboulake.com]
       Fixed problem with incorrectly marshalled location tags for null collections.
       Details: http://jira.codehaus.org/browse/CASTOR-1072
       (Werner - 20061212)

XML:   Resolved issue CASTOR-1696 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem related to creating incorrectly typed setXXXAsReference() method for 'j2' mode.
       Details: http://jira.codehaus.org/browse/CASTOR-1696
       (Werner - 20061212)

All:   Resolved issue CASTOR-1689 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed redundant 'API' Javadocs from build/HTML docs.
       Details: http://jira.codehaus.org/browse/CASTOR-1689
       (Werner - 20061212)
